--- a/src/ac.css
+++ b/src/ac.css
@@ -9,7 +9,7 @@
   stroke-dasharray: 187;
   stroke-dashoffset: 0;
   transform-origin: center;
-  animation:dash 1.4s ease-in-out infinite, colors (1.4s*4) ease-in-out infinite;
+  animation:dash 1.4s ease-in-out infinite, colors (1.4*4s) ease-in-out infinite;
 }
 @keyframes colors {
 	0% { stroke: #4285F4; }	25% { stroke: #DE3E35; }	50% { stroke: #F7C223; }	75% { stroke: #1B9A59; } 100% { stroke: #4285F4; }
